--- a/moviedb/src/index.css
+++ b/moviedb/src/index.css
@@ -20,6 +20,36 @@ header h1 {
   text-align: center;
 }
 
-/* main {
+main {
+  width: 100%;
+  max-width: 960px;
+  margin: 0 auto;
+}
 
-} */
+section {
+  padding: 15px;
+}
+
+.searchbox {
+  display: block;
+  width: 100%;
+  padding: 15px;
+
+  border: none;
+  outline: none;
+  background: none;
+
+  background-color: #EEE;
+  border-radius: 8px;
+
+  color: #53565A;
+  font-size: 20px;
+  font-weight: 300;
+
+  transition: 0.4s ease-out;
+
+}
+
+.searchbox:focus {
+  box-shadow: 0px 0px 8px 3px #4484C4;
+}
